--- a/src/components/Speciality/Speciality.css
+++ b/src/components/Speciality/Speciality.css
@@ -97,6 +97,12 @@
 @media (max-width: 768px) {
     .div-specs {
         padding: 1 1rem;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .spec-item {
+        font-size: 1.5rem;
     }
 
     .specs-content {
